--- a/package.json
+++ b/package.json
@@ -3,25 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@binance-chain/bsc-use-wallet": "^0.8.1",
+    "@ethersproject/abi": "^5.4.1",
+    "@pancakeswap-libs/uikit": "^0.29.4",
+    "@pancakeswap/uikit": "^0.49.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "ethers": "^5.4.6",
+    "kute.js": "^2.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "use-wallet": "^0.9.0",
+    "web-vitals": "^1.0.1",
+    "web3": "^1.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
